[package]
name = "bevy_project01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9.0"
#features = ["dynamic"]

#[dependencies.bevy-inspector-egui]
#version = "0.10"

[dependencies.bevy_rhai]
version = "0.3.0"

[dependencies.rhai]
version = "1.11.0"
features = ["only_i32", "f32_float"]
